--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="container">
     <h1>Lumora</h1>
     <p>Your Autonomous COO. Let AI run your business—sales, invoicing, support, and ops—with your approvals.</p>
-    <form action="https://formspree.io/f/mayplacholder" method="POST">
+    <form action="https://formspree.io/f/xjkekbal" method="POST">
       <input type="email" name="email" placeholder="you@company.com" required>
       <button type="submit">Join Waitlist</button>
     </form>
